--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 #Esse arquivo mostra as variáveis de ambiente que o Dev vai precisa pegar o valor e preencher
-DB_CONEXAO_STRING=
+#Estamos usando o MongoDB Atlas
+DB_CONEXAO_STRING= 
+MINHA_CHAVE_JWT=
+BUCKET_SLUG= 
+READ_KEY= 
+WRITE_KEY= 
