--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@cosmicjs/sdk": "1.0.9",
+    "@cosmicjs/sdk": "^1.0.9",
     "cosmicjs": "^4.3.7",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
@@ -17,7 +17,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
-    "next-connect": "^1.0.0",
+    "next-connect": "^0.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
