--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "next": "14.0.4",
+    "next": "13.2.4",
     "next-connect": "^0.13.0",
+    "nextjs-cors": "^2.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
